Details
-
Bug
-
Resolution: Done
-
P2: Important
-
5.7.1, 5.8.0
-
None
-
Windows 7 x64 SP1, Nvidia GeForce GT 630
Android 4.4.4
Description
Just modify materials-cpp example a little - hide or show Chest Entity every second (by set its parent to NULL or SceneRoot entity). After some time crash out with:
No shader program found for DNA
ASSERT: "m_activeShader" in file src/render/graphicshelpers/graphicscontext.cpp, line 1039
Invalid parameter passed to C runtime function.
I use qt 3d 5.7 (c3fdb888fbd94de0f6b7b1a6859cba8132ecc93d) with those 4 not yet merged commits (to be able to run applications on android)
1. https://codereview.qt-project.org/#/c/164993/2
2. https://codereview.qt-project.org/#/c/164994/2
3. https://codereview.qt-project.org/#/c/164995/2
4. https://codereview.qt-project.org/#/c/164996/