Ignore RenderCommand for current frame, if shader not loaded yet

Renderer::m_shaderGathererJob might not have finished yet, so the shader
wasn't marked as dirty yet, so it wasn't loaded in
Renderer::updateGLResources(). Next frame everything will be alright.

Task-number: QTBUG-55093
Change-Id: Ia60ed1dff4cb0495efbd7f70f87d227007ef560d
Reviewed-by: Sean Harmer <sean.harmer@kdab.com>